Stop the worker runner swallowing cleanup failures
The runner introduced in the previous commit printed a failing session
close to stderr instead of recording it. Six of these workers used to
close inside a guarded try-with-resources, where the language captured
such a failure for us, so the "one canonical idiom" commit quietly turned
a red test green -- the exact defect class the idiom exists to remove,
reintroduced by the fix for it. Proven both ways by making a worker's
close throw: on the previous commit the test passes and the throwable
appears only as a printed line, with this change it fails naming the
throwable as the root cause.

Cleanup failures now go through the same sink as body failures, with the
first failure kept as primary and any later one attached as suppressed,
so a close that fails because the body already failed cannot displace the
cause that explains it. The idiom's own header claims are now true rather
than aspirational.

The rest hardens the same fifteen-line region against the ways it could
still lose or misreport a failure. The runner's finally is guarded, so
the completion edge is published even if cleanup throws; the completion
wait reports an already-recorded failure instead of only announcing the
missing completion, since a worker that failed and then hung in its own
teardown is better described by its failure; the misuse guard that catches
an error read before the completion edge now carries whatever was recorded
as its cause, so it cannot hide a genuine failure behind a report about
test structure.

Two structural weaknesses in the same abstraction: latches were declared
after the thread had started, so a peer could in principle await a latch
the runner did not yet know to release -- they are now constructor
arguments, fixed before the thread exists -- and nothing bound a wait to
the declared set, so a typo produced a stall rather than an error; the
wait now asserts the latch was declared.

Three negative assertions ("this must not h